--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
             --section-1-bg-color: #F7F4E3;
             --section-2-bg-color: #F7F4E3;
             --section-3-bg-color: #F7F4E3;
-            --section-4-bg-color: #b5b5b5;
+            --section-4-bg-color: #efefef;
             --section-5-bg-color: #ffffff;
             --section-6-bg-color: #f5f5f5;
             --section-7-bg-color: #ffffff;
@@ -131,7 +131,10 @@
                 <!-- Navbar Icons -->
                 <ul class="navbar-nav icons">
                     <li class="nav-item social">
-                        <a href="#" class="nav-link"><i class="icon-social-twitter"></i></a>
+                        <a href="#" class="nav-link"><i class="icon-social-facebook"></i></a>
+                    </li>
+                    <li class="nav-item social">
+                        <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="nav-item social">
                         <a href="#" class="nav-link"><i class="icon-social-instagram"></i></a>
@@ -152,11 +155,11 @@
                     <li class="nav-item ml-3">
                         <a onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/kanecode/15min', text: 'Programe una reunión conmigo', color: '#0069ff', textColor: '#ffffff', branding: true });
                 return false;" style="color: white;" href="javascript:void(0);"
-                            class="btn ml-lg-auto primary-button"><i class="icon-rocket"></i>Let's meet</a>
+                            class="btn ml-lg-auto primary-button">Let's meet</a>
                         <!-- 
                 Suggestion: Replace the purchase button above with a contact button.
                 
-                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                <a href="#contact" class=" btn ml-lg-auto primary-button">CONTACT US</a>
               -->
                     </li>
                 </ul>
@@ -292,7 +295,7 @@
                         <div class=" text-left item col-12 col-md-3 p-1">
                             <div class="row">
                                 <div class="col-12 pt-5">
-                                    <img src="assets/images/31.png" alt="Sarah Lopez" class="person">
+                                    <img src="assets/images/32.png" alt="Sarah Lopez" class="person">
                                     <h4 class="text-left path-growth">Monitoring & Optimization</h4>
                                     <p class="p-about py-2 growth text-left">Analysis<br>Reporting<br>Results KPIs</p>
                                 </div>
