--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
                 <!-- Navbar Icons -->
                 <ul class="navbar-nav icons">
                     <li class="nav-item social">
-                        <a href="#" class="nav-link"><i class="icon-social-twitter"></i></a>
+                        <a href="#" class="nav-link"><i class="icon-social-facebook"></i></a>
+                    </li>
+                    <li class="nav-item social">
+                        <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="nav-item social">
                         <a href="#" class="nav-link"><i class="icon-social-instagram"></i></a>
@@ -152,11 +155,11 @@
                     <li class="nav-item ml-3">
                         <a onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/kanecode/15min', text: 'Programe una reunión conmigo', color: '#0069ff', textColor: '#ffffff', branding: true });
                                 return false;" style="color: white;" href="javascript:void(0);"
-                            class="btn ml-lg-auto primary-button"><i class="icon-rocket"></i>Let's meet</a>
+                            class="btn ml-lg-auto primary-button">Let's meet</a>
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button">CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -175,7 +178,7 @@
                     <div>
                         <section>
                             <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-1.png"
-                                class="hero-image" alt="Hero Image">
+                                class="hero-image-1" alt="Hero Image">
                             <div class="slide-content row" data-mask-768="70">
                                 <div class="col-12 d-flex inner">
                                     <div class="left align-self-center text-md-left">
@@ -818,7 +821,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 p-0 input-group align-self-center">
-                                    <button class="btn primary-button"><i class="icon-rocket"></i>REGISTER</button>
+                                    <button class="btn primary-button">REGISTER</button>
                                 </div>
                             </div>
                         </div>
