--- a/services.html
+++ b/services.html
@@ -129,7 +129,10 @@
                 <!-- Navbar Icons -->
                 <ul class="navbar-nav icons">
                     <li class="nav-item social">
-                        <a href="#" class="nav-link"><i class="icon-social-twitter"></i></a>
+                        <a href="#" class="nav-link"><i class="icon-social-facebook"></i></a>
+                    </li>
+                    <li class="nav-item social">
+                        <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="nav-item social">
                         <a href="#" class="nav-link"><i class="icon-social-instagram"></i></a>
@@ -150,11 +153,11 @@
                     <li class="nav-item ml-3">
                         <a onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/kanecode/15min', text: 'Programe una reunión conmigo', color: '#0069ff', textColor: '#ffffff', branding: true });
                                 return false;" style="color: white;" href="javascript:void(0);"
-                            class="btn ml-lg-auto primary-button"><i class="icon-rocket"></i>Let's meet</a>
+                            class="btn ml-lg-auto primary-button">Let's meet</a>
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button">CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -165,7 +168,7 @@
 
     <!-- Hero -->
     <section id="slider" class="hero p-0 odd">
-        <div class="swiper-container no-slider slider-h-85">
+        <div class="swiper-container no-slider ">
 
             <div class="swiper-wrapper">
 
@@ -175,8 +178,8 @@
                         <img data-aos="zoom-out-up" data-aos-delay="800"
                             src="/assets/images/banner2_princial_servicios.png" class="hero-image-services"
                             alt="Hero Image">
-                        <figure class="h-20"></figure>
-                        <div class="slide-content row mb-5 pt-md-5" data-mask-768="70">
+                        <figure class=""></figure>
+                        <div class="slide-content row mb-5 pt-5 pt-md-0" data-mask-768="70">
                             <div class="col-12 inner d-flex">
                                 <div class="col-12 col-md-9 center align-self-center text-md-left w-100">
                                     <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title services-h1">
@@ -185,7 +188,7 @@
                                         <span class="title-6">goals for growth.</span>
                                     </h1>
                                     <p data-aos="zoom-out-up" data-aos-delay="600"
-                                        class="p-about pb-5 pb-md-0 mb-5 px-0 col-12 col-md-6">A full
+                                        class="p-about pb-5 pb-md-0 mb-5 px-0 col-12 col-md-8">A full
                                         suite of marketing services executed with extensive expertise ensures results
                                         that meet ? or exceed ? your expectations. </p>
                                 </div>
@@ -212,8 +215,8 @@
                 <img src="/assets/images/Block_30_B.jpg" class="w-100" alt="">
             </div>
             <div class="col-12 col-md-6 content-services-bot">
-                <h2 class="h2-services">Scale With Flexibility</h2>
-                <p class="p-services">Need the experience of a Chief Marketing Officer? That's no problem. Want to
+                <h2 class="h2-services col-12 col-xl-10">Scale With Flexibility</h2>
+                <p class="p-services col-12 col-xl-10">Need the experience of a Chief Marketing Officer? That's no problem. Want to
                     design and launch a
                     360-degree digital marketing strategy and growth plan? We've got you covered. Choose individual
                     services as needed, from fee-based projects to monthly programs.</p>
@@ -224,8 +227,8 @@
         </div>
         <div class="col-12 d-flex flex-column-reverse flex-md-row p-0">
             <div class="col-12 col-md-6 content-services-bot">
-                <h2 class="h2-services">Tech & Tools for Optimal Growth</h2>
-                <p class="p-services">Utilizing an open-source approach, we are well-versed on current marketing
+                <h2 class="h2-services col-12 col-xl-10">Tech & Tools for Optimal Growth</h2>
+                <p class="p-services col-12 col-xl-10">Utilizing an open-source approach, we are well-versed on current marketing
                     platforms and are
                     consistently identifying and onboarding new technology, allowing us to employ the best tools for
                     your growth strategy. We also take part in SALT Venture Partner's accelerated growth eco-system,
@@ -237,161 +240,6 @@
             <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Block_31.jpg" class="w-100" alt=""></div>
         </div>
     </section>
-
-
-
-    <!-- Portfolio Grid -->
-    <!-- <section id="portfolio-grid" class="section-1 showcase portfolio blog-grid filter-section">
-            <div class="overflow-holder">
-                <div class="container">
-                    <div class="row text-center intro">
-                        <div class="col-12">
-                            <h2 class="mb-0">Your business objectives drive our digital marketing recommendations to boldly build your business transformation.</h2>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center text-center">
-                        <div class="col-12">
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                <label class="btn active">
-                                    <input type="radio" value="design-thinking" checked class="btn-filter-item">
-                                    <span>Design Thinking</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="branding" class="btn-filter-item">
-                                    <span>Branding</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="photography" class="btn-filter-item">
-                                    <span>Photography</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="digital-marketing" class="btn-filter-item">
-                                    <span>Digital Marketing</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="technology" class="btn-filter-item">
-                                    <span>Technology</span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>                  
-                    <div class="row items filter-items">
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='[]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-7-h.jpg" class="image-over">
-                                        <img src="assets/images/news-7-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["technology"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-8-h.jpg" class="image-over">
-                                        <img src="assets/images/news-8-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["digital-marketing"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="https://www.youtube.com/watch?v=7e90gBu4pas" class="image-over">
-                                        <i class="play-video-full icon-control-play"></i>
-                                        <div class="mask-radius-full"></div>
-                                        <img src="assets/images/news-9-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["design-thinking"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-10-h.jpg" class="image-over">
-                                        <img src="assets/images/news-10-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["branding"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-11-h.jpg" class="image-over">
-                                        <img src="assets/images/news-11-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["photography"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-12-h.jpg" class="image-over">
-                                        <img src="assets/images/news-12-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-                    
-                        <div class="col-1 filter-sizer"></div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
 
 
 
@@ -624,7 +472,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 p-0 input-group align-self-center">
-                                    <button class="btn primary-button"><i class="icon-rocket"></i>REGISTER</button>
+                                    <button class="btn primary-button">REGISTER</button>
                                 </div>
                             </div>
                         </div>
