--- a/specialties.html
+++ b/specialties.html
@@ -131,7 +131,10 @@
                 <!-- Navbar Icons -->
                 <ul class="navbar-nav icons">
                     <li class="nav-item social">
-                        <a href="#" class="nav-link"><i class="icon-social-twitter"></i></a>
+                        <a href="#" class="nav-link"><i class="icon-social-facebook"></i></a>
+                    </li>
+                    <li class="nav-item social">
+                        <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="nav-item social">
                         <a href="#" class="nav-link"><i class="icon-social-instagram"></i></a>
@@ -152,23 +155,22 @@
                     <li class="nav-item ml-3">
                         <a onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/kanecode/15min', text: 'Programe una reunión conmigo', color: '#0069ff', textColor: '#ffffff', branding: true });
                                 return false;" style="color: white;" href="javascript:void(0);"
-                            class="btn ml-lg-auto primary-button"><i class="icon-rocket"></i>Let's meet</a>
+                            class="btn ml-lg-auto primary-button">Let's meet</a>
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button">CONTACT US</a>
                             -->
                     </li>
                 </ul>
             </div>
         </nav>
-
     </header>
 
     <!-- Hero -->
 
     <section id="slider" class="hero p-0 odd">
-        <div class="swiper-container no-slider slider-h-75">
+        <div class="swiper-container no-slider">
 
             <div class="swiper-wrapper">
 
@@ -186,7 +188,7 @@
                                         <span class="title-3">scale-up.</span>
                                     </h1>
                                     <p data-aos="zoom-out-up" data-aos-delay="600"
-                                        class="p-about pb-0 mb-md-0 mb-5 col-12 col-md-6 px-0">Our
+                                        class="p-about pb-0 mb-md-0 mb-5 col-12 col-md-7 px-0">Our
                                         years of experience with health tech and educational organizations in Spain,
                                         Latin America, and the US provide us with deeper insights into these markets.
                                     </p>
@@ -264,6 +266,7 @@
         </div>
 
     </section>
+
     <section class="pt-0">
         <div class="container cta-contact">
             <div class="row text-left intro">
@@ -516,7 +519,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 p-0 input-group align-self-center">
-                                    <button class="btn primary-button"><i class="icon-rocket"></i>REGISTER</button>
+                                    <button class="btn primary-button">REGISTER</button>
                                 </div>
                             </div>
                         </div>
