--- a/contact.html
+++ b/contact.html
@@ -73,12 +73,13 @@
             --section-5-bg-color: #e5e5e5;
             --section-6-bg-color: #f5f5f5;
             --section-7-bg-color: #ffffff;
+            --footer-bg-color: #222f3e;
         }
     </style>
 
 </head>
 
-<body>
+<body style="background-color:var(--section-1-bg-color)">
 
     <!-- Header -->
     <header id="header">
@@ -125,7 +126,10 @@
                 <!-- Navbar Icons -->
                 <ul class="navbar-nav icons">
                     <li class="nav-item social">
-                        <a href="#" class="nav-link"><i class="icon-social-twitter"></i></a>
+                        <a href="#" class="nav-link"><i class="icon-social-facebook"></i></a>
+                    </li>
+                    <li class="nav-item social">
+                        <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="nav-item social">
                         <a href="#" class="nav-link"><i class="icon-social-instagram"></i></a>
@@ -146,11 +150,11 @@
                     <li class="nav-item ml-3">
                         <a onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/kanecode/15min', text: 'Programe una reunión conmigo', color: '#0069ff', textColor: '#ffffff', branding: true });
                                 return false;" style="color: white;" href="javascript:void(0);"
-                            class="btn ml-lg-auto primary-button"><i class="icon-rocket"></i>Let's meet</a>
+                            class="btn ml-lg-auto primary-button">Let's meet</a>
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button">CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -175,7 +179,7 @@
     </section>
 
     <!-- Contacts -->
-    <section id="contacts" class="section-1 pt-0">
+    <section id="contacts" class="section-1 pb-2 pt-0">
         <div class="container">
             <div class="row intro">
                 <div class="col-12 col-md-6 align-self-center text-center text-md-left">
@@ -204,7 +208,7 @@
                 <form action="php/form.php" id="leverage-simple-form" class="leverage-simple-form col-12 col-md-7 px-0">
                     <input type="hidden" name="section" value="leverage_form">
 
-                    <input type="hidden" name="reCAPTCHA">
+                    <!-- <input type="hidden" name="reCAPTCHA"> -->
                     <!-- Remove this field if you want to disable recaptcha -->
 
                     <div class="row form-group-margin">
@@ -471,7 +475,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 p-0 input-group align-self-center">
-                                    <button class="btn primary-button"><i class="icon-rocket"></i>REGISTER</button>
+                                    <button class="btn primary-button">REGISTER</button>
                                 </div>
                             </div>
                         </div>
