--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="swiper-slide slide-center" id="1">
                     <div>
                         <section>
-                            <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-1.png"
+                            <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/home_slide_1B.jpg"
                                 class="hero-image-1" alt="Hero Image">
                             <div class="slide-content row" data-mask-768="70">
                                 <div class="col-12 d-flex inner">
@@ -549,7 +549,7 @@
                                     <img src="assets/images/claudia.jpg" alt="Sarah Lopez" class="person">
                                     <h4 class="testimonials-c">CLAUDIA SANDOVAL</h4>
                                     <h5 class="testimonials-e">Sales Director LATAM Formación Alcala</h5>
-                                    <p class="testimonials-t text-center">Collaborating with Bunji for the positioning, deployment, and growth of Formación Alcalá in Latin America has undoubtedly been a high impact strategic decision. Their knowledge of digital strategy, efficiency in lead generation, creativity in design, and skills in communications on social media, together with the commitment and permanent availability of the team, can only be described in one way: IMPECCABLE.</p>
+                                    <p class="testimonials-t text-center">Collaborating with Bunji to position, deploy and grow Formación Alcalá in Latin America was a very important decision. They're great at creating digital strategies, generating leads, being creative with design, and using social media effectively. And they're always available to help! Their commitment to their work is impeccable. </p>
                                 </div>
                             </div>
                         </div>
@@ -585,8 +585,8 @@
                     <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="400"
                         class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
                 </div>
-                <img src="assets/images/2.png" class="img-contact-1" alt="">
-                <img src="assets/images/3.png" class="img-contact-2" alt="">
+                <img src="assets/images/lets_talk.png" class="img-contact-2" alt="">
+                <img src="assets/images/lets_talk2.png" class="img-contact-1" alt="">
             </div>
         </div>
     </section>
