--- a/services.html
+++ b/services.html
@@ -216,10 +216,7 @@
             </div>
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services col-12 col-xl-10">Scale With Flexibility</h2>
-                <p class="p-services col-12 col-xl-10">Need the experience of a Chief Marketing Officer? That's no problem. Want to
-                    design and launch a
-                    360-degree digital marketing strategy and growth plan? We've got you covered. Choose individual
-                    services as needed, from fee-based projects to monthly programs.</p>
+                <p class="p-services col-12 col-xl-10">If you're looking to design a 360-degree digital marketing strategy and growth plan, all with the expertise of a CMO, you're in the right place. Choose individual services as needed, from fee-based projects to monthly programs.</p>
                 <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="200"
                     class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                     How</a>
