--- a/specialties.html
+++ b/specialties.html
@@ -215,13 +215,7 @@
             </div>
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services">Higher Education</h2>
-                <p class="p-services">We have extensive experience partnering with higher education institutions to
-                    support their growth and business objectives. Whether you're seeking to recruit more qualified
-                    applicants, boost development campaigns, or maintain close contact with alumni, we can help.
-                    <br><br> Our digital journey mapping services provide a deeper understanding of your audiences, what
-                    they care about, and optimal communication styles. Customized social media, paid advertising, and
-                    email campaigns reach qualified individuals across channels - helping clients significantly boost
-                    student awareness and enrollments.
+                <p class="p-services">We have extensive experience partnering with higher education institutions to support their growth and business objectives. Whether you're seeking to recruit more qualified applicants, boost development campaigns, or maintain close contact with alumni, we can help. Our digital journey mapping services help you understand your audience and their needs, so you can deliver the best possible communication strategy. Our customized social media, paid advertising, and email campaigns reach qualified individuals across channels, helping clients significantly boost student enrollment.
                 </p>
             </div>
         </div>
@@ -242,15 +236,7 @@
             </div>
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services mt-0">Agency Partners</h2>
-                <p class="p-services">Digital marketing services are an essential part of many agency offerings, but
-                    certain types of projects might not be in your wheelhouse. Learning and scaling technology in-house
-                    for continuous delivery and monitoring can be costly. Retaining experienced creative talent is
-                    costly and challenging in today's market. Turn to us. <br><br>Partner with Bunji to augment your
-                    team with added expertise and bandwidth, without having to hire more staff. We recommend and manage
-                    powerful integrated technology platforms to deliver top-notch digital marketing services and
-                    eliminate the need for you to pursue additional technology. Avoid opening the door to competitors in
-                    your accounts by leaning on us as your invisible partner, allowing you to gain flexibility while
-                    expanding your offerings to grow your agency.</p>
+                <p class="p-services">Digital marketing services are essential for agencies, but not all projects are right for them. Additionally, learning and using technology to deliver and monitor projects can be expensive. Retaining experienced creative talent is a costly and challenging task in today's market. Bunji can help agencies augment their team with added expertise and bandwidth, without having to hire more staff. Our strong experience with powerful integrated technology platforms can help agencies deliver high-quality digital marketing services, while eliminating their need to pursue additional technology. By using our services, you can expand your reach, without worrying about competition; allowing you to expand your offerings, stay flexible and grow your agency.</p>
             </div>
         </div>
         <div class="col-12 d-flex flex-column flex-md-row flex-column-reverse p-0">
@@ -280,8 +266,8 @@
                     <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="400"
                         class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
                 </div>
-                <img src="assets/images/2.png" class="img-contact-1" alt="">
-                <img src="assets/images/3.png" class="img-contact-2" alt="">
+                <img src="assets/images/lets_talk.png" class="img-contact-2" alt="">
+                <img src="assets/images/lets_talk2.png" class="img-contact-1" alt="">
             </div>
         </div>
     </section>
